fixed overlapping section title  on mobile

--- a/src/app/book/book.css
+++ b/src/app/book/book.css
@@ -52,9 +52,12 @@ The book pages use this as their size.
 @media (max-width: 6.9in) {
     .book-page {
         max-height: fit-content;
+    }
+    .book-page p {
         font-size: 11pt;
         line-height: 15pt;
     }
+
     /* DEBUG */ 
     .debug .book-page {
         border: 1px solid blue;
@@ -309,6 +312,7 @@ h1#book-title .title-piece.smaller {
 .book-page .book-part-title {
     text-decoration: underline;
     font-size: 2em;
+    line-height: 1.5em;
     margin-top: 0;
 }
 .book-section-title {
